feat: add Ronin Wallet key generation, refactor node op directory structure

--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -2,13 +2,13 @@
 description: Delegate your RON tokens to a validator.
 ---
 
-import myStaking from './assets/my-staking.png'
-import stepOne from './assets/connect-wallet.png'
+import myStaking from './assets/my-staking.png';
+import stepOne from './assets/connect-wallet.png';
 import stepTwo from './assets/delegate.png';
-import stepThree from './assets/enter-amount.png'
-import stepFour from './assets/confirm-transaction.png'
-import transactionSuccess from './assets/transaction-success.png'
-import validatorDetails from './assets/validator-details.png'
+import stepThree from './assets/enter-amount.png';
+import stepFour from './assets/confirm-transaction.png';
+import transactionSuccess from './assets/transaction-success.png';
+import validatorDetails from './assets/validator-details.png';
 
 # Become a delegator
 This guide demonstrates how to delegate your RON stake to a validator
