--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -49,44 +49,18 @@ claim rewards, manage stake, and maintain the validator's profile.
     findSidebarItem('/docs/validators/faq'),
     ]} />
 
-### Install a validator node 
-These gudies assist individuals or institutions responsible
-for setting up and confguring a validator node and a bridge operator.
+### Install your Ronin node 
+This section walks you through the setup and configuration of
+Ronin nodes (validator, non-validator, archive)
+and a bridge operator node.
 
-Introduction:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/introduction'),
-    findSidebarItem('/docs/node-operators/latest'),
-    ]} />
-
-Setup:
+Start with the introduction guides, and continue from there:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/combined'),
-    findSidebarItem('/docs/node-operators/mainnet/validator'),
-    findSidebarItem('/docs/node-operators/mainnet/bridge'),
-    findSidebarItem('/docs/node-operators/mainnet/non-validator'),
-    findSidebarItem('/docs/node-operators/mainnet/archive'),
-    findSidebarItem('/docs/node-operators/cli'),
-    findSidebarItem('/docs/node-operators/generate-keys'),
-    ]} />
-
-Resources:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/resources/faq'),
-    findSidebarItem('/docs/node-operators/resources/configurations/mainnet'),
-    findSidebarItem('/docs/node-operators/resources/configurations/testnet'),
-    findSidebarItem('/docs/node-operators/resources/security'),
-    ]} />
-
-Saigon testnet guides:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/testnet/combined'),
-    findSidebarItem('/docs/node-operators/testnet/non-validator'),
-    findSidebarItem('/docs/node-operators/testnet/archive'),
+    findSidebarItem('/docs/node-operators/introduction'),
+    findSidebarItem('/docs/node-operators/setup/introduction'),
+    findSidebarItem('/docs/node-operators/mainnet'),
+    findSidebarItem('/docs/node-operators/testnet'),
     ]} />
 
 ### Build on Ronin
