feat/node setup options (#149)
* feat: add Setup introduction page

* fix: rename VM to Server in setup diagrams

* refactor: get rid of Maintenance section

* refactor: get rid of Maintenance section

* refactor and chore: update CLI page, standardize all mainnet guides, update sidebar

* feat: add 'Introduction to nodes' page, move related definitions out of Key concepts

* feat: add more description to Introduction for node operators

* feat: add Ronin Wallet key generation, refactor node op directory structure

* chore: remove extra slash from reward percentage in White paper

* chore: remove 'iOS' from key generation page

* chore: add Kien's changes to CLI page

* chore: rename hyperlink from Introduction to Before you start

* chore: remove weird sentence from description of full node

* Update docs/node-operators/setup/mainnet/validator.md

Co-authored-by: Harry Ngo <huyngopt1994@gmail.com>

* chore: update docs/node-operators/setup/mainnet/non-validator.md

Co-authored-by: Harry Ngo <huyngopt1994@gmail.com>

* update docs/node-operators/setup/mainnet/combined.md

Co-authored-by: Harry Ngo <huyngopt1994@gmail.com>

* update docs/node-operators/setup/mainnet/bridge.md

Co-authored-by: Harry Ngo <huyngopt1994@gmail.com>

---------

Co-authored-by: Harry Ngo <huyngopt1994@gmail.com>

--- a/docs/validators/rewards/claim.mdx
+++ b/docs/validators/rewards/claim.mdx
@@ -8,20 +8,13 @@ import stepTwo from './assets/claim-step-2.png';
 import confirmTransaction from './assets/confirm-transaction.png';
 
 # Claim rewards
+This page describes how to claim your staking reward
+and keep track of the commission and bridge reward.  
 
-## Types of rewards
-As a validator, you can earn three types of rewards:
-* **Commission.** Reward derived from the block rewards times the commission rate.
-* **Bridge reward.** Reward received for verifying transactions via Ronin Bridge. 
-* **Staking reward.** Reward derived from your self-stake and divided proportionally with your delegators.
-
-## Commission and bridge rewards
-You don't need to claim commission and bridge rewards
-because they are transferred to you automatically
-in the end of each period (approximately one day). 
-
-You can, however, keep track of these rewards under
-**My Staking** > **Activities**.
+:::info
+To learn more about rewards for validators, see
+[Rewards](./../../basics/rewards.md).
+:::
 
 ## Staking reward
 Staking reward is calculated each period (approximately one day)
@@ -39,3 +32,12 @@ You need to claim this reward manually.
 <img src={confirmTransaction} width={400} />
 
 After the transaction is confirmed, the reward is credited to your wallet.
+
+## Track commission and bridge reward
+You don't need to claim commission and bridge reward
+because they are transferred to you automatically
+in the end of each period (approximately one day). 
+
+You can, however, keep track of these rewards in
+[Validator Dashboard](https://validator.roninchain.com) >
+**My Staking** > **Activities**.
