--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -49,60 +49,18 @@ claim rewards, manage stake, and maintain the validator's profile.
     findSidebarItem('/docs/validators/faq'),
     ]} />
 
-### Install a validator node 
-These gudies assist individuals or institutions responsible
-for setting up and confguring a validator node. 
-On Ronin, validators are required to run a validator node *and* a bridge operator node.
-The two methods of installation are via Docker or using the Ronin CLI. 
+### Install your Ronin node 
+This section walks you through the setup and configuration of
+Ronin nodes (validator, non-validator, archive)
+and a bridge operator node.
 
-We recommended running both nodes on one machine:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/combined-validator'),
-    ]} />
-
-Or you can run the validator and bridge on two separate machines:
+Start with the introduction guides, and continue from there:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/validator'),
-    findSidebarItem('/docs/node-operators/mainnet/bridge'),
-    ]} />
-
-Here's how to run and manage your validator node via Ronin CLI:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/cli'),
-    ]} />
-
-Guides to run other types of nodes:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/non-validator'),
-    findSidebarItem('/docs/node-operators/mainnet/archive'),
-    ]} />
-
-Maintain your node:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/maintenance/upgrade'),
-    findSidebarItem('/docs/node-operators/maintenance/generate-keys'),
-    findSidebarItem('/docs/node-operators/maintenance/secure'),
-    ]} />
-
-Network specification and FAQ:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/resources/faq'),
-    findSidebarItem('/docs/node-operators/resources/specification'),
-    ]} />
-
-Guides for installing and configuring nodes on the Saigon testnet:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/testnet/validator'),
-    findSidebarItem('/docs/node-operators/testnet/bridge'),
-    findSidebarItem('/docs/node-operators/testnet/non-validator'),
-    findSidebarItem('/docs/node-operators/testnet/archive'),
+    findSidebarItem('/docs/node-operators/introduction'),
+    findSidebarItem('/docs/node-operators/setup/introduction'),
+    findSidebarItem('/docs/node-operators/mainnet'),
+    findSidebarItem('/docs/node-operators/testnet'),
     ]} />
 
 ### Build on Ronin
