--- a/docs/node-operators/index.mdx
+++ b/docs/node-operators/index.mdx
@@ -2,59 +2,38 @@ import DocCardList from '@theme/DocCardList';
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
 # Node operators
-### Run your own Ronin node
-These gudies assist individuals or institutions responsible
-for setting up and confguring a validator node on the Ronin mainnet. 
-On Ronin, validators are required to run a validator node *and* a bridge operator node.
-The two methods of installation are via Docker or using the Ronin CLI. 
-
-We recommended running both nodes on one machine:
+### Introduction
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/combined-validator'),
+    findSidebarItem('/docs/node-operators/introduction'),
+    findSidebarItem('/docs/node-operators/setup/introduction'),
     ]} />
 
-Or you can run the validator and bridge on two separate machines:
+### Setup
 
 <DocCardList items={[
+    findSidebarItem('/docs/node-operators/mainnet/combined'),
     findSidebarItem('/docs/node-operators/mainnet/validator'),
     findSidebarItem('/docs/node-operators/mainnet/bridge'),
-    ]} />
-
-Here's how to run and manage your validator node via Ronin CLI:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/cli'),
-    ]} />
-
-Guides to run other types of nodes:
-
-<DocCardList items={[
     findSidebarItem('/docs/node-operators/mainnet/non-validator'),
     findSidebarItem('/docs/node-operators/mainnet/archive'),
+    findSidebarItem('/docs/node-operators/setup/generate-keys'),
+    findSidebarItem('/docs/node-operators/setup/cli'),
     ]} />
 
-### Maintain your node
+### Resources
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/maintenance/upgrade'),
-    findSidebarItem('/docs/node-operators/maintenance/generate-keys'),
-    findSidebarItem('/docs/node-operators/maintenance/secure'),
-    ]} />
-
-### Network specification and FAQ
-
-<DocCardList items={[
+    findSidebarItem('/docs/node-operators/resources/parameters/mainnet'),
+    findSidebarItem('/docs/node-operators/resources/parameters/testnet'),
+    findSidebarItem('/docs/node-operators/resources/security'),
     findSidebarItem('/docs/node-operators/resources/faq'),
-    findSidebarItem('/docs/node-operators/resources/specification'),
     ]} />
 
 ### Saigon testnet guides
-These guides are for installing and configuring nodes on the Saigon testnet:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/testnet/validator'),
-    findSidebarItem('/docs/node-operators/testnet/bridge'),
+    findSidebarItem('/docs/node-operators/testnet/combined'),
     findSidebarItem('/docs/node-operators/testnet/non-validator'),
     findSidebarItem('/docs/node-operators/testnet/archive'),
     ]} />
