--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -32,7 +32,7 @@ the validator's self-stake.
 * The validator may be temporarily or permanently banned
 from the network, or _jailed_.
 
-Slashed RON go to back to the rewards pool, which is used to reward validators.
+Slashed RON go to back to the rewards pool.
 
 ## Slashable cases
 There are four groups of slashable cases on Ronin, where
@@ -48,7 +48,7 @@ validator is slashed as follows:
 validator in the future. Their status is set to **In jail**.
 * The validator gets slashed the minimum staking amount of
 self-delegated RON.
-* The validator doesn't earn commission and staking rewards while in jail.
+* The validator doesn't earn commission and the staking reward while in jail.
 
 <img src={doubleSign} width={1224} />
 
@@ -65,14 +65,14 @@ the validator gets slashed.
 
 #### Tier 1 validator slashing
 If a validator misses more than 50 blocks a day, they don't earn
-commission and staking rewards on that day, and their status is set to **Punished**.
+commission and the staking reward on that day, and their status is set to **Punished**.
 
 <img src={valSlashTierOne} width={1224} />
 
 #### Tier 2 validator slashing
 If a validator misses more than 150 blocks a day, they get slashed
 as follows:
-* The validator doesn't earn commission and staking rewards on that day.
+* The validator doesn't earn commission and the staking reward on that day.
 * The validator is slashed 10,000 of self-delegated RON.
 * The validator is jailed for $\approx2$ days (57,600 blocks) and is
 banned from the validator set while in jail.
@@ -108,7 +108,7 @@ the corresponding validator doesn't earn bridge rewards on that day.
 If a bridge operator misses more than 30% votes, 
 the corresponding validator gets slashed as follows:
 * The validator doesn't earn any rewards (commission,
-staking rewards, bridge rewards) on that day.
+staking reward, bridge reward) on that day.
 * The validator is jailed for $\approx$ 2 days (57,600 blocks)
 with no option to bail out.
 
