--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -23,8 +23,7 @@ online and up to date with the network, and to produce the correct
 block when it comes to their turn.
 
 If a validator is unavailable when needed or shows signs of malicious
-behavior, they get penalized by having their stake or reward reduced,
-or _slashed_, as follows:
+behavior, they are subjected to penalties such as the the following:
 * Reward slashing. Withholding rewards that the validator would've 
 otherwise earned.
 * RON slashing. Charging a fixed amount of RON tokens from 
@@ -43,10 +42,10 @@ It's a serious error when a validator signs more than one block with the same he
 Anyone can submit a slash request with the double-sign evidence, which
 should contain the two block headers with the same height, sealed by
 the same validator. Upon verifying the evidence, the offending
-validator is slashed as follows:
+validator is penalized as follows:
 * The validator is jailed for $2^{63}-1$ blocks and can't be a
 validator in the future. Their status is set to **In jail**.
-* The validator gets slashed the minimum staking amount of
+* The validator is slashed the minimum staking amount of
 self-delegated RON.
 * The validator doesn't earn commission and the staking reward while in jail.
 
@@ -70,8 +69,7 @@ commission and the staking reward on that day, and their status is set to **Puni
 <img src={valSlashTierOne} width={1224} />
 
 #### Tier 2 validator slashing
-If a validator misses more than 150 blocks a day, they get slashed
-as follows:
+If a validator misses more than 150 blocks a day, the following penalties apply:
 * The validator doesn't earn commission and the staking reward on that day.
 * The validator is slashed 10,000 of self-delegated RON.
 * The validator is jailed for $\approx2$ days (57,600 blocks) and is
@@ -84,7 +82,7 @@ sufficient credit score.
 
 #### Tier 3 validator slashing
 After being put in jail and getting bailed out, if the validator
-misses 50 more blocks within the day, they get slashed as follows:
+misses 50 more blocks within the day, the following penalties apply:
 * The reward after bailing out is removed.
 * The validator is slashed 10,000 of self-delegated RON.
 * The validator is jailed for $\approx2$ days (57,600 blocks). 
@@ -100,16 +98,15 @@ There are two tiers in this slash.
 
 #### Tier 1 operator slashing
 If a bridge operator misses more than 10% votes,
-the corresponding validator doesn't earn bridge rewards on that day.
+the operator doesn't earn the bridge reward on that day.
 
 <img src={bridSlashTierOne} width={1224} />
 
 #### Tier 2 operator slashing
-If a bridge operator misses more than 30% votes, 
-the corresponding validator gets slashed as follows:
-* The validator doesn't earn any rewards (commission,
+If a bridge operator misses more than 30% votes, the following penalties apply:
+* The operator doesn't earn any rewards (commission,
 staking reward, bridge reward) on that day.
-* The validator is jailed for $\approx$ 2 days (57,600 blocks)
+* The operator is jailed for $\approx$ 2 days (57,600 blocks)
 with no option to bail out.
 
 <img src={bridSlashTierTwo} width={1224} />
@@ -117,7 +114,7 @@ with no option to bail out.
 ### Relaying slash
 If a Governing Validator doesn’t sync the set of bridge
 operators to the Ethereum chain for three consecutive days,
-they get slashed as follows:
+the following penalties apply:
 * The validator is slashed 10,000 of self-delegated RON.
 * The validator doesn't earn commission on the day of slashing.
 * The validator's status is set to **Punished**.
