chore: rename first section on Slashing page

--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -13,7 +13,7 @@ import relayingSlash from './assets/relaying-slash.png';
 
 # Slashing rules
 
-## Introduction
+## Overview
 Slashing is a mechanism that governs the behavior of validators on
 the Ronin blockchain.
 
