feat: add link to Discord announcement in the announcement bar

--- a/docs/validators/rewards/claim.mdx
+++ b/docs/validators/rewards/claim.mdx
@@ -9,7 +9,7 @@ import confirmTransaction from './assets/confirm-transaction.png';
 
 # Claim rewards
 This page describes how to claim your staking reward
-and keep track of the commission and bridge reward.  
+and keep track of the commission and bridge reward.
 
 :::info
 To learn more about rewards for validators, see
@@ -33,7 +33,7 @@ You need to claim this reward manually.
 
 After the transaction is confirmed, the reward is credited to your wallet.
 
-## Track commission and bridge reward
+## Commission and bridge reward
 You don't need to claim commission and bridge reward
 because they are transferred to you automatically
 in the end of each period (approximately one day). 
