--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -4,11 +4,11 @@ slug: overview
 ---
 
 import doubleSign from './assets/double-sign.png';
-import valSlashTierOne from './assets/val-slash-tier-1.png';
-import valSlashTierTwo from './assets/val-slash-tier-2.png';
-import valSlashTierThree from './assets/val-slash-tier-3.png';
-import bridSlashTierOne from './assets/brid-slash-tier-1.png';
-import bridSlashTierTwo from './assets/brid-slash-tier-2.png';
+import valSlashTierOne from './assets/validator-tier-1.png';
+import valSlashTierTwo from './assets/validator-tier-2.png';
+import valSlashTierThree from './assets/validator-tier-3.png';
+import bridSlashTierOne from './assets/bridge-tier-1.png';
+import bridSlashTierTwo from './assets/bridge-tier-2.png';
 import relayingSlash from './assets/relaying-slash.png';
 
 # Slashing rules
@@ -17,41 +17,41 @@ import relayingSlash from './assets/relaying-slash.png';
 Slashing is a mechanism that governs the behavior of validators on
 the Ronin blockchain.
 
-Each validator is responsible for running two nodes: a validator node
+Each validator is responsible for [running](./../../node-operators/introduction) two nodes: a validator node
 and a bridge operator node. Validators are required to keep the nodes
 online and up to date with the network, and to produce the correct
 block when it comes to their turn.
 
-If a validator is unavailable when needed or shows signs of malicious
-behavior, they are subjected to penalties such as the the following:
-* Reward slashing. Withholding rewards that the validator would've 
+If a node is unavailable when needed or shows signs of malicious
+behavior, it is subjected to penalties such as the the following:
+* Reward slashing. Withholding rewards that the node would've 
 otherwise earned.
 * RON slashing. Charging a fixed amount of RON tokens from 
-the validator's self-stake.
-* The validator may be temporarily or permanently banned
-from the network, or _jailed_.
+the self-stake. Slashed RON then go to back to the reward pool.
+* Temporary or permanent ban from the network, or _jailing_.
 
-Slashed RON go to back to the rewards pool.
+:::note 
+A "day" in the slashing rules refers to the period
+from midnight to midnight UTC.
+:::
 
-## Slashable cases
-There are four groups of slashable cases on Ronin, where
-the rules previously described apply in combination.
-
-### Double-sign validator
+## Double-sign validator
 It's a serious error when a validator signs more than one block with the same height.
 Anyone can submit a slash request with the double-sign evidence, which
 should contain the two block headers with the same height, sealed by
 the same validator. Upon verifying the evidence, the offending
 validator is penalized as follows:
 * The validator is jailed for $2^{63}-1$ blocks and can't be a
-validator in the future. Their status is set to **In jail**.
+validator in the future.
 * The validator is slashed the minimum staking amount of
 self-delegated RON.
 * The validator doesn't earn commission and the staking reward while in jail.
 
+The validator's status is set to **In jail**.
+
 <img src={doubleSign} width={1224} />
 
-### Unavailability validator
+## Unavailability validator
 The performance of Ronin relies on the ability of everyone in the
 validator set to produce blocks on time when it's their turn.
 If a validator misses their turn, it affects the performance of
@@ -62,66 +62,68 @@ We use a smart contract to record the number of missed blocks for each
 validator. If the number of missed blocks exceeds a predefined threshold,
 the validator gets slashed.
 
-#### Tier 1 validator slashing
-If a validator misses more than 50 blocks a day, they don't earn
-commission and the staking reward on that day, and their status is set to **Punished**.
+### Tier 1 validator slashing
+If a validator misses more than 100 blocks in a day, the validator doesn't earn
+commission and the staking reward on that day.
+The validator's status is set to **Punished**.
 
 <img src={valSlashTierOne} width={1224} />
 
-#### Tier 2 validator slashing
-If a validator misses more than 150 blocks a day, the following penalties apply:
+### Tier 2 validator slashing
+If a validator misses more than 500 blocks in a day, the following penalties apply:
 * The validator doesn't earn commission and the staking reward on that day.
-* The validator is slashed 10,000 of self-delegated RON.
-* The validator is jailed for $\approx2$ days (57,600 blocks) and is
+* The validator is slashed 1,000 of self-delegated RON.
+* The validator is jailed for $\approx$ 2 days (57,600 blocks) and is
 banned from the validator set while in jail.
 
-The validator can [bail out](bailout.mdx) of jail if they have
-sufficient credit score.
+The validator's status is set to **In Jail**. If the validator
+has sufficient credit score, they can [bail out](bailout.mdx) of jail.
 
 <img src={valSlashTierTwo} width={1224} />
 
-#### Tier 3 validator slashing
-After being put in jail and getting bailed out, if the validator
-misses 50 more blocks within the day, the following penalties apply:
-* The reward after bailing out is removed.
-* The validator is slashed 10,000 of self-delegated RON.
-* The validator is jailed for $\approx2$ days (57,600 blocks). 
+### Tier 3 validator slashing
+After getting bailed out, if the validator
+misses 100 more blocks on the same day, the following penalties apply:
+* The reward after bailout is removed.
+* The validator is slashed 1,000 of self-delegated RON.
+* The validator is jailed for $\approx$ 2 days (57,600 blocks).
 
-This time, the validator can't bail out.
+The validator's status is set to **In Jail**, and this time,
+the validator can't bail out.
 
 <img src={valSlashTierThree} width={1224} />
 
-### Unavailability bridge operator
+## Unavailability bridge operator
 The system slashes bridge operators for not providing enough signatures.
-There's a smart contract that records the number of the bridge operators' votes.
-There are two tiers in this slash.
+This is checked against a smart contract that records the
+number of the bridge operators' votes.
 
-#### Tier 1 operator slashing
-If a bridge operator misses more than 10% votes,
+### Tier 1 operator slashing
+If a bridge operator misses more than 10% votes in a day,
 the operator doesn't earn the bridge reward on that day.
+The operator's status is set to **Punished**.
 
 <img src={bridSlashTierOne} width={1224} />
 
-#### Tier 2 operator slashing
-If a bridge operator misses more than 30% votes, the following penalties apply:
-* The operator doesn't earn any rewards (commission,
-staking reward, bridge reward) on that day.
-* The operator is jailed for $\approx$ 2 days (57,600 blocks)
-with no option to bail out.
+### Tier 2 operator slashing
+If a bridge operator misses more than 30% votes in a day, the operator doesn't
+earn any rewards (commission, staking reward, bridge reward) on that day.
+The operator's status is set to **Punished**.
 
 <img src={bridSlashTierTwo} width={1224} />
 
-### Relaying slash
+## Relaying slash
 If a Governing Validator doesn’t sync the set of bridge
 operators to the Ethereum chain for three consecutive days,
 the following penalties apply:
 * The validator is slashed 10,000 of self-delegated RON.
 * The validator doesn't earn commission on the day of slashing.
-* The validator's status is set to **Punished**.
+
+The validator's status is set to **Punished**.
 
 <img src={relayingSlash} width={1224} />
 
-### Multiple slashes
+## Multiple slashes
 Validators might experience multiple concurrent slashes if they have issues
 with both their validator node and bridge operator node, and the relaying
 responsibilities of the Governing Validator.
