chore: remove unnecessary step from node upgrade procedure

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -66,7 +66,7 @@ Start with the introduction guides, and continue from there:
 ### Build on Ronin
 Looking to build and deploy your project on Ronin? The developer
 documentation is available on the Sky Mavis Developer Portal:
-[https://docs.skymavis.com](https://docs.skymavis.com/docs/getting-started)
+[https://docs.skymavis.com](https://docs.skymavis.com/docs/getting-started).
 
 ### Get involved
 Stay informed on the latest Ronin news, events, and programs:
@@ -74,4 +74,4 @@ Stay informed on the latest Ronin news, events, and programs:
 * [Discord](https://discord.gg/P5GgF7SK)
 * [Twitter](https://twitter.com/ronin_network)
 
-Sign up to [Ronin's Newsletter](https://roninblockchain.substack.com/)
+Sign up to [Ronin's Newsletter](https://roninblockchain.substack.com/).
