feat: add Vale instructions, edit the README

--- a/docs/validators/governance/create.mdx
+++ b/docs/validators/governance/create.mdx
@@ -29,7 +29,7 @@ closed automatically.
 :::
 
 3. Select the type of proposal you want to create—in this example, 
-it's **Add new governing validator(s)**.
+it's **Add new governing validator**.
 <img src={stepThree} width={550} />
 
 4. Provide the three addresses of the validator.
