--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -58,5 +58,5 @@ if you end up being selected as a validator.
 6. Provide the initial stake of RON.
 <img src={stepFive} width={1280} />
 
-Done! You're now a Validator Candidate.
+Congratulations, you're now a Validator Candidate.
 <img src={stepSix} width={1280} />
