chore: update info box in claim.mdx

--- a/docs/validators/rewards/claim.mdx
+++ b/docs/validators/rewards/claim.mdx
@@ -12,7 +12,7 @@ This page describes how to claim your staking reward
 and keep track of the commission and bridge reward.
 
 :::info
-To learn more about rewards for validators, see
+For information about rewards for validators, see
 [Rewards](./../../basics/rewards.md).
 :::
 
