chore: made link text consistent throughout Node operators section

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -7,7 +7,7 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 
 # Get started
 
-### Learn about Ronin
+## Learn about Ronin
 These guides provide general overview of Ronin and
 introduce basic concepts to get you started.
 
@@ -21,7 +21,7 @@ introduce basic concepts to get you started.
     findSidebarItem('/docs/basics/roles'),
     ]} />
 
-### Stake and delegate
+## Stake and delegate
 Learn how to use your RON tokens, where to purchase RON, 
 how to delegate your stake and transfer it between validators.
 
@@ -35,7 +35,7 @@ how to delegate your stake and transfer it between validators.
     findSidebarItem('/docs/delegators/faq'),
     ]} />
 
-### Join as a validator 
+## Join as a validator 
 These guides describe how to become a validator, change commission,
 claim rewards, manage stake, and maintain the validator's profile.
 
@@ -49,7 +49,7 @@ claim rewards, manage stake, and maintain the validator's profile.
     findSidebarItem('/docs/validators/faq'),
     ]} />
 
-### Install your Ronin node 
+## Install your Ronin node 
 This section walks you through the setup and configuration of
 Ronin nodes (validator, non-validator, archive)
 and a bridge operator node.
@@ -63,15 +63,15 @@ Start with the introduction guides, and continue from there:
     findSidebarItem('/docs/node-operators/testnet'),
     ]} />
 
-### Build on Ronin
+## Build on Ronin
 Looking to build and deploy your project on Ronin? The developer
 documentation is available on the Sky Mavis Developer Portal:
 [https://docs.skymavis.com](https://docs.skymavis.com/docs/getting-started).
 
-### Get involved
+## Get involved
 Stay informed on the latest Ronin news, events, and programs:
 
 * [Discord](https://discord.gg/P5GgF7SK)
 * [Twitter](https://twitter.com/ronin_network)
 
-Sign up to [Ronin's Newsletter](https://roninblockchain.substack.com/).
+Sign up to [Ronin Newsletter](https://roninblockchain.substack.com/).
