--- a/docs/node-operators/index.mdx
+++ b/docs/node-operators/index.mdx
@@ -2,13 +2,13 @@ import DocCardList from '@theme/DocCardList';
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
 # Node operators
-### Introduction
+## Introduction
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/introduction'),
     ]} />
 
-### Setup
+## Setup
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/setup/introduction'),
@@ -22,7 +22,7 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
     findSidebarItem('/docs/node-operators/setup/cli'),
     ]} />
 
-### Resources
+## Resources
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/resources/parameters/mainnet'),
@@ -31,7 +31,7 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
     findSidebarItem('/docs/node-operators/resources/faq'),
     ]} />
 
-### Saigon testnet guides
+## Saigon testnet guides
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/testnet/combined'),
