chore: standardize the naming

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -65,8 +65,8 @@ Start with the introduction guides, and continue from there:
 
 ## Build on Ronin
 Looking to build and deploy your project on Ronin? The developer
-documentation is available on the Sky Mavis Developer Portal:
-[https://docs.skymavis.com](https://docs.skymavis.com/docs/getting-started).
+documentation is available on the
+[Sky Mavis developer documentaton hub](https://docs.skymavis.com/docs/getting-started).
 
 ## Get involved
 Stay informed on the latest Ronin news, events, and programs:
