--- a/docs/delegators/manage/track.mdx
+++ b/docs/delegators/manage/track.mdx
@@ -6,14 +6,19 @@ import commissionChange from './assets/commission.png'
 import validatorDetails from './assets/details.png'
 import slashedValidator from './assets/slashing.png'
 import renouncedValidator from './assets/renunciation.png'
+import rewardStats from './assets/rewards.png'
 
 # Track validators
 There are a few ways you can keep track of changes among your
 validators on [RON Staking](https://app.roninchain.com/staking):
 
-* Before staking to a validator, visit the validator's profile to 
-see their rewards, block analysis, and the list of their delegators.
+* Before staking to a validator, learn about the validator's total stake
+by visiting **Analytics > Total stake** in their profile.
 <img src={validatorDetails} width={1440} />
+
+* You can also check the amount of delegators' rewards (both claimed and
+not claimed) for the last 30 days by selecting **Analytics > Rewards**.
+<img src={rewardsStats} width={1440} />
 
 * If a validator has scheduled to change their commission rate,
 the clock icon appears on their profile. Hover over the icon for details.
