fix: remove extra dot in image import statements

--- a/docs/delegators/stake/move.mdx
+++ b/docs/delegators/stake/move.mdx
@@ -5,7 +5,7 @@ description: Move your stake to another validator.
 import stepOne from './assets/move-step-1.png'
 import stepTwo from './assets/move-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
-import countdown from './assets/move-countdown.png.'
+import countdown from './assets/move-countdown.png'
 
 # Move stake
 You can move your stake to a different validator at any time and
