--- a/docs/delegators/stake/withdraw.mdx
+++ b/docs/delegators/stake/withdraw.mdx
@@ -5,7 +5,7 @@ description: Unstake from your validators.
 import stepOne from './assets/withdraw-step-1.png'
 import stepTwo from './assets/withdraw-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
-import countdown from './assets/withdraw-countdown.png.'
+import countdown from './assets/withdraw-countdown.png'
 
 # Withdraw stake
 You can withdraw your stake at any time and without penalties as
