fix: fix error in import statement

--- a/docs/delegators/manage/track.mdx
+++ b/docs/delegators/manage/track.mdx
@@ -18,7 +18,7 @@ by visiting **Analytics > Total stake** in their profile.
 
 * You can also check the amount of delegators' rewards (both claimed and
 not claimed) for the last 30 days by selecting **Analytics > Rewards**.
-<img src={rewardsStats} width={1440} />
+<img src={rewardStats} width={1440} />
 
 * If a validator has scheduled to change their commission rate,
 the clock icon appears on their profile. Hover over the icon for details.
