fix: make correct indentation

--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -28,13 +28,14 @@ Learn how to stake your RON with this official Staking Tutorial.
 **Connect wallet**.
 <img src={stepOne} width={1440} />
 
-2. Switch to the **All validators** tab, pick a validator
+2. Switch to the **All validators** tab, then pick a validator
 you want to delegate to, and then select **Delegate**.
 <img src={stepTwo} width={1440} />
 
   To learn more about a validator before making a decision,
   open the details page by selecting the validator's name
-  from the list.
+  from the list. For more ways to learn about a validator,
+  see [Track validators](./../manage/track.mdx).
   <img src={validatorDetails} width={1440} />
 
 3. Enter the amount manually or choose **Max** to stake all available RON,
