fix: correct spelling of the Total Stake tab

--- a/docs/delegators/manage/track.mdx
+++ b/docs/delegators/manage/track.mdx
@@ -13,7 +13,7 @@ There are a few ways you can keep track of changes among your
 validators on [RON Staking](https://app.roninchain.com/staking):
 
 * Before staking to a validator, learn about the validator's total stake
-by visiting **Analytics > Total stake** in their profile.
+by visiting **Analytics > Total Stake** in their profile.
 <img src={validatorDetails} width={1440} />
 
 * You can also check the amount of delegators' rewards (both claimed and
