fix: broken link to Ronin dev docs

--- a/docs/developers/portal.mdx
+++ b/docs/developers/portal.mdx
@@ -1,12 +1,12 @@
 ---
 description: Learn how to build on Ronin.
+title: Developers
 ---
 
 import portal from './assets/portal.png';
 
-# Developers
 Looking to build and deploy your project on Ronin? The developer documentation
 is available on the
-[Sky Mavis developer documentaton hub](https://docs.skymavis.com/docs/getting-started).
+[Sky Mavis developer documentaton hub](https://docs.skymavis.com/docs/ronin-get-started).
 
 <img src={portal} width={1400} />
