--- a/docs/developers/portal.mdx
+++ b/docs/developers/portal.mdx
@@ -7,6 +7,6 @@ import portal from './assets/portal.png';
 
 Looking to build and deploy your project on Ronin? The developer documentation
 is available on the
-[Sky Mavis developer documentaton hub](https://docs.skymavis.com/docs/ronin-get-started).
+[Sky Mavis developer documentation hub](https://docs.skymavis.com/docs/ronin-get-started).
 
 <img src={portal} width={1400} />
