feat: add emergency exit

--- a/docs/validators/manage/maintenance.mdx
+++ b/docs/validators/manage/maintenance.mdx
@@ -1,4 +1,5 @@
 ---
+title: Schedule maintenance
 description: Schedule maintenance for your node.
 ---
 
@@ -7,8 +8,7 @@ import stepTwo from './assets/schedule-maintenance-step-2.png';
 import ongoingMaintenance from './assets/maintenance-ongoing.png';
 import upcomingMaintenance from './assets/maintenance-upcoming.png';
 
-# Schedule maintenance
-Schedule a maintenance period for your node.
+Learn how to schedule a maintenance period for your node.
 
 :::caution
 There can be up to three validators scheduling maintenance mode
@@ -17,7 +17,7 @@ validators when their maintenance mode ends.
 :::
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com) >
-**My Profile** > **Maintenance mode**
+your account > **Maintenance mode**
 <img src={stepOne} width={280} />
 
 2. Specify the maintenance duration in epochs. 
