--- a/docs/validators/manage/profile.mdx
+++ b/docs/validators/manage/profile.mdx
@@ -6,10 +6,9 @@ title: View profile
 import profile from './assets/profile.png';
 import governingAddresses from './assets/governing-addresses.png';
 
-# View your profile
 View the list of addresses linked to your validator account on
 [Validator Dashboard](https://validator.roninchain.com) >
-your connected wallet > **My profile**.
+your account > **My profile**.
 
 <img src={profile} width={280} />
 
