--- a/docs/validators/manage/renounce.mdx
+++ b/docs/validators/manage/renounce.mdx
@@ -1,20 +1,18 @@
 ---
-description: Renounce as a validator.
-title: Renounce role
+description: Renounce your validator role.
+title: Renounce your role
 ---
 
 import StepOne from './assets/renounce-step-1.png';
 import StepTwo from './assets/renounce-step-2.png';
 
-# Renounce your role
-You can renounce your role of a validator.
 If you're a Standard Validator or Validator Candidate, 
-follow this guide. If you’re a Governing Validator, contact 
-the Sky Mavis team for renunciation.
+follow this guide to renounce your validator role. If you’re a Governing Validator, contact 
+the Sky Mavis team.
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com) >
-**My Staking** > expand the options > **Renounce**.
-<img src={StepOne} width={1280} />
+your account > **Renounce**.
+<img src={StepOne} width={280} />
 
 2. Confirm your decision. Keep in mind that renunciation
 is permanent and cannot be undone.
@@ -29,4 +27,4 @@ online and up to date during this period.
 :::
 
 Your commission, bridge reward, staking reward, and the remaining
-self-stake will be transferred to you on the date of renunciation.
+self-stake is transferred to you on the date of renunciation.
