--- a/docs/validators/manage/emergency-exit.mdx
+++ b/docs/validators/manage/emergency-exit.mdx
@@ -1,5 +1,5 @@
 ---
-title: Request an emergency exit
+title: Emergency exit
 description: Request an emergency exit when your node is being targeted by an attacker.
 slug: '/validators/emergency-exit'
 ---
@@ -8,7 +8,7 @@ import exit from './assets/emergency-exit.png';
 import stepOne from './assets/request-exit.png';
 import stepTwo from './assets/submit-exit.png';
 
-If you find that your node is compromised, such as when your private keys are stolen, you may be under attack and at risk of [slashing](./../slashing/slashing.mdx). When you suspect that you're being targeted, you can request an emergency exit to protect your node and prevent further damage.
+If you find that your node is compromised, such as when your private keys are stolen, you may be under attack and at risk of [slashing](./../slashing/slashing.mdx). When you suspect that you're being targeted, you can request an emergency exit to protect your node and prevent damage.
 
 ## Submit your request
 
@@ -28,4 +28,4 @@ Based on the Governing Validators' vote on your Emergency Exit proposal, your st
 - If the proposal is approved, you're refunded 300,000 RON. Of this amount, 50,000 RON is refunded immediately, and the remaining 250,000 RON is transferred to you the next day (00:00 UTC).
 - If the proposal is not approved or expires, you're refunded 250,000 RON. The amount is transferred to your account after seven working days from the proposal's creation date.
 
-After your emergency exit is complete, you can no longer validate transactions on Ronin and receive rewards. Your status is set to Renounced.
+After your emergency exit is complete, you can no longer validate transactions on Ronin and receive rewards. Your status is set to "Renounced".
