chore: replace screenshots in commission

--- a/docs/validators/manage/commission.mdx
+++ b/docs/validators/manage/commission.mdx
@@ -23,6 +23,6 @@ This date must be at least seven days from today.
 <img src={stepTwo} width={416} />
 
 After you save the new rate, a clock icon is displayed next to the
-current rate to inform the community of the upcoming change.
+current rate to indicate the upcoming change.
 
-<img src={stepThree} width={324} />
+<img src={stepThree} width={280} />
