--- a/docs/validators/manage/emergency-exit.mdx
+++ b/docs/validators/manage/emergency-exit.mdx
@@ -1,6 +1,7 @@
 ---
-title: Emergency exit
-description: Request an emergency exit when your node is being targeted by an attacker.
+title: Request an emergency exit
+sidebar_label: Emergency exit
+description: Learn how to request an emergency exit if your node is compromised.
 slug: '/validators/emergency-exit'
 ---
 
