--- a/docs/validators/manage/maintenance.mdx
+++ b/docs/validators/manage/maintenance.mdx
@@ -11,13 +11,13 @@ import upcomingMaintenance from './assets/maintenance-upcoming.png';
 Learn how to schedule a maintenance period for your node.
 
 :::caution
-There can be up to three validators scheduling maintenance mode
-at a time. If you’re unable to schedule, check with the other
-validators when their maintenance mode ends.
+Up to three validators can schedule maintenance
+at a time. If you cannot schedule maintenance for your node, check with the other
+validators about their maintenance duration.
 :::
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com) >
-your account > **Maintenance mode**
+your account > **Maintenance mode**.
 <img src={stepOne} width={280} />
 
 2. Specify the maintenance duration in epochs. 
