--- a/docs/validators/manage/emergency-exit.mdx
+++ b/docs/validators/manage/emergency-exit.mdx
@@ -26,7 +26,7 @@ If you find that your node is compromised, such as when your private keys are st
 
 Based on the Governing Validators' vote on your Emergency Exit proposal, your stake may be refunded as follows:
 
-- If the proposal is approved, you're refunded 300,000 RON. Of this amount, 50,000 RON is refunded immediately, and the remaining 250,000 RON is transferred to you the next day (00:00 UTC).
-- If the proposal is not approved or expires, you're refunded 250,000 RON. The amount is transferred to your account after seven working days from the proposal's creation date.
+- If the proposal is approved, your entire self-stake is refunded: 50,000 RON is credited immediately, while the remaining amount is transferred to you the next day (00:00 UTC).
+- If the proposal is not approved or expires, you're refunded the amount equal to your self-stake minus 50,000 RON. The amount is transferred to you after seven working days from the proposal's creation date.
 
 After your emergency exit is complete, you can no longer validate transactions on Ronin and receive rewards. Your status is set to "Renounced".
