Feat/emergency exit (#200)
* feat: add emergency exit

* fix: screenshot

* chore: replace screenshots in commission

* fix: rewrite the result of emergency exit

* chore: reorder pages in Manage your account

--- a/docs/validators/manage/commission.mdx
+++ b/docs/validators/manage/commission.mdx
@@ -1,4 +1,5 @@
 ---
+title: Change commission rate
 description: Set a different commission rate.
 ---
 
@@ -6,7 +7,6 @@ import stepOne from './assets/change-commission-step-1.png';
 import stepTwo from './assets/change-commission-step-2.png';
 import stepThree from './assets/change-commission-step-3.png';
 
-# Change commission rate
 When [registering](./../onboarding/become-validator.mdx) to become
 a validator, you set a commission rate—the percentage of the block reward
 you receive before distributing the rest to your delegators.
@@ -14,7 +14,7 @@ you receive before distributing the rest to your delegators.
 You can change this commission rate in your profile.
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com) >
-**My Profile** > **Commission rate**.
+your account > **Commission rate**.
 <img src={stepOne} width={280} />
 
 2. Enter the new commission rate in the range of 0-20%,
@@ -23,6 +23,6 @@ This date must be at least seven days from today.
 <img src={stepTwo} width={416} />
 
 After you save the new rate, a clock icon is displayed next to the
-current rate to inform the community of the upcoming change.
+current rate to indicate the upcoming change.
 
-<img src={stepThree} width={324} />
+<img src={stepThree} width={280} />
