--- a/docs/validators/manage/maintenance.mdx
+++ b/docs/validators/manage/maintenance.mdx
@@ -1,4 +1,5 @@
 ---
+title: Schedule maintenance
 description: Schedule maintenance for your node.
 ---
 
@@ -7,17 +8,16 @@ import stepTwo from './assets/schedule-maintenance-step-2.png';
 import ongoingMaintenance from './assets/maintenance-ongoing.png';
 import upcomingMaintenance from './assets/maintenance-upcoming.png';
 
-# Schedule maintenance
-Schedule a maintenance period for your node.
+Learn how to schedule a maintenance period for your node.
 
 :::caution
-There can be up to three validators scheduling maintenance mode
-at a time. If you’re unable to schedule, check with the other
-validators when their maintenance mode ends.
+Up to three validators can schedule maintenance
+at a time. If you cannot schedule maintenance for your node, check with the other
+validators about their maintenance duration.
 :::
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com) >
-**My Profile** > **Maintenance mode**
+your account > **Maintenance mode**.
 <img src={stepOne} width={280} />
 
 2. Specify the maintenance duration in epochs. 
