feat: document 3-day waiting period between maintenance

--- a/docs/validators/manage/maintenance.mdx
+++ b/docs/validators/manage/maintenance.mdx
@@ -1,6 +1,6 @@
 ---
-title: Schedule maintenance
-description: Schedule maintenance for your node.
+title: Plan a maintenance period
+description: Schedule a maintenance period for your validator node.
 ---
 
 import stepOne from './assets/schedule-maintenance-step-1.png';
@@ -8,13 +8,10 @@ import stepTwo from './assets/schedule-maintenance-step-2.png';
 import ongoingMaintenance from './assets/maintenance-ongoing.png';
 import upcomingMaintenance from './assets/maintenance-upcoming.png';
 
-Learn how to schedule a maintenance period for your node.
-
-:::caution
-Up to three validators can schedule maintenance
-at a time. If you cannot schedule maintenance for your node, check with the other
-validators about their maintenance duration.
-:::
+You can schedule when your node undergoes maintenance.
+Maintenance can be scheduled by up to three validators at the same time. 
+If you are having trouble scheduling maintenance, ask the other validators about their maintenance schedules.
+After your current maintenance ends, you need to wait at least three days before scheduling another one.
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com) >
 your account > **Maintenance mode**.
