chore: remove 'learn how' from descriptions

--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -1,5 +1,6 @@
 ---
 description: Delegate your RON tokens to a validator.
+title: Become a delegator
 ---
 
 import myStaking from './assets/my-staking.png';
@@ -10,20 +11,24 @@ import stepFour from './assets/confirm-transaction.png';
 import transactionSuccess from './assets/transaction-success.png';
 import validatorDetails from './assets/validator-details.png';
 
-# Become a delegator
+## Introduction
+
 This guide demonstrates how to delegate your RON stake to a validator
 and how to view all your delegations. The delegation tutorial is provided in
 two formats: [video](#video) and [text](#text).
 
 ## Prerequisites
-The only prerequisite is to have RON tokens in your Ronin Wallet.
+
+Have RON tokens in your Ronin Wallet.
 
 ## Delegate RON
 ### Video tutorial {#video}
+
 Learn how to stake your RON with this official Staking Tutorial.
 <div class='embed-container'><iframe src='https://www.youtube.com/embed/rCSA6edBub8' frameborder='0' allowfullscreen></iframe></div>
 
 ### Text tutorial {#text}
+
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **Connect wallet**.
 <img src={stepOne} width={1440} />
@@ -47,6 +52,7 @@ reveal your estimated monthly and daily earnings.
 <img src={stepFour} width={400} />
 
 ## View your delegations
+
 To view the list of validators that you delegated to,
 go to [RON staking](https://app.roninchain.com/staking) > **My staking**.
 
