--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -1,15 +1,14 @@
 ---
 description: Your starting point in this documentation.
+title: Get started
 ---
 
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-# Get started
-
 ## Learn about Ronin
-These guides provide general overview of Ronin and
-introduce basic concepts to get you started.
+
+General overview of Ronin and its basic concepts.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/basics/introduction'),
@@ -22,8 +21,9 @@ introduce basic concepts to get you started.
     ]} />
 
 ## Stake and delegate
-Learn how to use your RON tokens, where to purchase RON, 
-how to delegate your stake and transfer it between validators.
+
+Use your RON tokens, purchase more RON, 
+delegate your stake and transfer it between validators.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/delegators/onboarding/buy-ron'),
@@ -35,8 +35,9 @@ how to delegate your stake and transfer it between validators.
     findSidebarItem('/docs/delegators/faq'),
     ]} />
 
-## Join as a validator 
-These guides describe how to become a validator, change commission,
+## Join as a validator
+
+Become a validator, change commission,
 claim rewards, manage stake, and maintain the validator's profile.
 
 <DocCardList items={[ 
@@ -50,8 +51,9 @@ claim rewards, manage stake, and maintain the validator's profile.
     ]} />
 
 ## Install your Ronin node 
-This section walks you through the setup and configuration of
-Ronin nodes (validator, non-validator, archive)
+
+Set up and configure your Ronin nodes
+(validator, non-validator, archive)
 and a bridge operator node.
 
 Start with the introduction guides, and continue from there:
@@ -64,14 +66,16 @@ Start with the introduction guides, and continue from there:
     ]} />
 
 ## Build on Ronin
-Looking to build and deploy your project on Ronin? The developer
-documentation is available on the
-[Sky Mavis developer documentaton hub](https://docs.skymavis.com/docs/getting-started).
+
+Looking to build and deploy your project on Ronin? The developer documentation
+is available on the
+[Sky Mavis developer documentation site](https://docs.skymavis.com/ronin/overview).
 
 ## Get involved
-Stay informed on the latest Ronin news, events, and programs:
 
-* [Discord](https://discord.gg/P5GgF7SK)
-* [Twitter](https://twitter.com/ronin_network)
+Stay informed with the latest Ronin news, events, and programs:
 
-Sign up to [Ronin Newsletter](https://roninblockchain.substack.com/).
+* [Ronin Discord](https://discord.gg/P5GgF7SK)
+* [Ronin Twitter](https://twitter.com/ronin_network)
+
+Sign up to [Ronin's Newsletter](https://roninblockchain.substack.com/).
