--- a/docs/developers/portal.mdx
+++ b/docs/developers/portal.mdx
@@ -1,5 +1,5 @@
 ---
-description: Learn how to build on Ronin.
+description: Build on, and deploy to, Ronin.
 title: Developers
 ---
 
@@ -7,6 +7,6 @@ import portal from './assets/portal.png';
 
 Looking to build and deploy your project on Ronin? The developer documentation
 is available on the
-[Sky Mavis developer documentation hub](https://docs.skymavis.com/docs/ronin-get-started).
+[Sky Mavis developer documentation site](https://docs.skymavis.com/ronin/overview).
 
 <img src={portal} width={1400} />
