fix: rename the page for clarity

--- a/docs/delegators/stake/stake.mdx
+++ b/docs/delegators/stake/stake.mdx
@@ -1,7 +1,7 @@
 ---
 description: Increase, move, or withdraw your stake.
 slug: /delegators/stake
-title: Stake
+title: Increase or move stake
 ---
 
 import stepOne from './assets/increase-stake-step-1.png'
@@ -22,11 +22,11 @@ import withdrawCountdown from './assets/withdraw-countdown.png'
 
 This page demonstrates how to increase, move, or withdraw your existing stake.
 
-## Stake more
-
 :::info
 Looking to stake your RON? [Become a delegator first](./../onboarding/become-delegator.mdx).
 :::
+
+## Stake more
 
 After becoming a delegator, you can increase your stake by delegating
 more RON to your validators.
